# StlnkWebNprdChatV2

./: .env.example  .gitignore  GIT_WORKFLOW.md  INCREMENTAL_UPDATES.md  PANDAS_FALLBACK.md  PANDAS_FALLBACK_ENHANCEMENT.md  PANDAS_FALLBACK_SUMMARY.md  PINECONE_SETUP.md  README.md  VECTOR_STORE_FIX.md  daily_update.ps1  integration_out.txt  pyproject.toml  requirements.txt  run_app.ps1  start_with_venv.ps1  test.ipynb  test_chroma_quick.py  test_embeddings_only.py  test_pandas_fallback.py  test_pandas_fallback_seal.py  test_vectorstore.py  update_index.py
.github/workflows/: dev_stlnkwebchatbotnprdv1.yml  main_stlnkwebchatbotnprdv2.yml
agents/: analytics_engine.py  azure_agent.py  memory_manager.py  prompts.py  query_bank.py  router.py  static_greet_info_handler.py  tools.py  tools.py.backup
api/: main.py  schemas.py
cli/: run.py
config/: __init__.py  settings.py
docs/: data_dictionary.md  implementation_plan_analyst.md  overview_info.md
services/: azure_blob.py  azure_helpers.py  preprocess.py  vectorstore.py
streamlit_app/: app.py
tests/: test_analyst_integration.py  test_api_fixes.py  test_company_info.py  test_fix_verification_2.py  test_query_bank.py  test_schema_guard_logic.py  test_user_requirements.py  test_user_requirements_v2.py
utils/: container.py  logger.py  misc.py  static_greet_info_handler.py
